# phasefield5d

./: .gitignore  LICENSE  README.md  pyproject.toml
data/FeMnNiCoCu_fcc/: DATA_FORMAT.md
examples/: simulate.py
phasefield5d/: __init__.py  cli.py
phasefield5d/elasticity/: __init__.py  anisotropy.py  constants.py  energies.py
phasefield5d/kinetics/: __init__.py  operators.py
phasefield5d/materials/: __init__.py  alloy.py  database.py  elements.py
phasefield5d/solver/: __init__.py  config.py  elastic.py  fluxes.py  interpolation.py  io.py  mobility.py  modifiers.py  operators.py  post_process.py  system.py
phasefield5d/thermodynamics/: __init__.py  io.py
phasefield5d/utils/: __init__.py  diagnostics.py  figures.py  io.py  labels.py  matrix.py  statistics.py  transforms.py
run/: launch.py
tests/: test_materials.py  test_smoke.py
